--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,20 @@
-.navbarlink{
-    margin: 10px;
+
+.close{
+        display:none;
+}
+.cart-icon{
+    position: relative;
+    margin-right: 20px;
+
+}
+.cart-icon span{
+    background:crimson;
+    border-radius: 20px;
+    color: white;
+    position: absolute;
+    top:-10px;
+    right: -5px;
+    padding:5px 7px;
+    font-size: 10px;
+
 }
