--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -1,6 +1,44 @@
 .cart {
+ position: relative;
+ border:1px solid #ccc;
+ transform: scale(0.98);
+ padding-top: 200px;
+ padding-right: 500px;
+ padding-bottom: 100px;
+ padding-left: 300px;
+ position:relative
+
+}
+.box-detail h2{
     padding-top: 100px;
-    padding-right: 300px;
-    padding-bottom: 100px;
-    padding-left: 300px;
+
+}
+.amount span {
+    color: crimson;
+    padding: 0 20px;
+
+}
+
+.amount button{
+    width:40px ;
+    height: 40px;
+    border:1px solid #777;
+}
+.delete{
+    position: relative;
+    top:0;
+    right: 5px;
+    color:crimson;
+    font-weight: 900;
+    cursor:pointer;
+}
+.total {
+    width: 100% ;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.total h3 {
+    color: crimson;
 }
