--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -37,7 +37,8 @@
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    max-width: 60%;
 }
 .total h3 {
     color: crimson;
